# sn38

./: .gitignore  README.md  automate_submission.py  build_dataset.py  docker-compose.validator.yml  hf_transfer  pyproject.toml  train_chronogpt.py
docs/: miner.md  validator.md
scripts/: compute-compose-hash.py  generate_benchmarks.py  sample_benchmarks.json  test_model.py
sn38/neurons/: validator.py
sn38/template/: backend_api.py  tee.py
